updated header, footer and nav

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -20,5 +20,9 @@
 @use "./partials/variables";
 @use "./partials/typography";
 @use "./partials/baseStyles";
+@use "./partials/header";
+@use "./partials/footer";
+@use "./partials/nav";
 @use "./partials/sections";
 @use "./partials/mediaQuery";
+
