--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -1,4 +1,4 @@
-@use "./variables" as *;
+@use "variables" as *;
 
 .categoryGallery {
     display: flex;
@@ -14,8 +14,8 @@
         border-radius: 10%;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         text-align: center;
 
         img {
@@ -23,22 +23,48 @@
             border-radius: 10%;
             margin-bottom: 20px;
         }
-        
-        &:hover,
+
+        &:hover ,
         &:focus {
             transform: scale(0.95);
         }
+
     }
+
     .itemOne {
         background-color: $quinary;
     }
-    .itemTwo{
+
+    .itemTwo {
         background-color: $secondary;
     }
-    .itemThree{
+
+    .itemThree {
         background-color: $tertiary;
     }
-    .itemFour{
+
+    .itemFour {
         background-color: $quaternary;
+    }
+
+}
+
+.play {
+    background-image: url(../assets/background-image.jpg);
+    background-position: center;
+    background-size: cover;
+    min-height: 90vh;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+
+    .playContainer {
+        max-width: 650px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 70px 45px;
+        border: 24px solid $secondary;
+        background-color: $solidWhite;
     }
 }
